# wasmCloud

./: Cargo.toml  README.md  ROADMAP.md  flake.nix
.github/workflows/: check-conventional-commits.yml  inteltest.yml  wash.yml  wasmcloud.yml
crates/component/src/wrappers/: http.rs
crates/control-interface/: CHANGELOG.md
crates/control-interface-proto/: Cargo.toml  README.md  build.rs
crates/control-interface-proto/src/: ctl.proto  lib.rs
crates/core/: CHANGELOG.md
crates/host/: Cargo.toml  build.rs
crates/host/proto/: events.proto
crates/host/src/: lib.rs  secrets.rs  store.rs  workload_identity.rs
crates/host/src/nats/: builder.rs  ctl.rs  mod.rs  store.rs
crates/host/src/policy/: default.rs  mod.rs  nats.rs
crates/host/src/wasmbus/: claims.rs  config.rs  ctl.rs  event.rs  host_config.rs  jetstream.rs  mod.rs  store.rs
crates/host/src/wasmbus/ctl/: mod.rs  nats.rs
crates/host/src/wasmbus/nats/: builder.rs  config.rs  ctl.rs  event.rs  mod.rs  provider.rs  secrets.rs  store.rs
crates/host/src/wasmbus/providers/: mod.rs
crates/nats-service-generator/: Cargo.toml  README.md
crates/nats-service-generator/src/: lib.rs
crates/protobuf-nats-service-generator/: Cargo.toml  README.md
crates/protobuf-nats-service-generator/src/: lib.rs
crates/runtime/src/component/: mod.rs
crates/test-util/src/: host.rs
crates/tracing/: CHANGELOG.md
crates/wascap/: CHANGELOG.md
crates/wash-cli/: Cargo.toml  README.md  build.rs
crates/wash-cli/src/cmd/dev/: embedded.rs  mod.rs
crates/wasmcloud-proto-generator/: Cargo.toml  README.md
crates/wasmcloud-proto-generator/src/: lib.rs
crates/wasmcloud-proto-types/: Cargo.toml  README.md  build.rs
crates/wasmcloud-proto-types/src/: ctl.proto  lib.rs
examples/rust/components/http-hello-world/: Cargo.toml  wadm.yaml
examples/rust/components/http-hello-world/src/: lib.rs
examples/rust/components/http-keyvalue-counter/: wadm.yaml
src/: main.rs
tests/: builtins.rs  config.rs  workload_identity.rs
