[package]
name = "wasmcloud-control-interface-proto"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Required for generating
proto = { workspace = true }
# Required for using the types
prost = { workspace = true, features = ["derive", "std"] }

# TEMPORARY: not required for this crate, required for consumers
# maybe consider keeping this and the generated code? idk
anyhow = { workspace = true }
async-nats = { workspace = true, features = ["ring"] }
bytes = { workspace = true }
futures = { workspace = true }

[build-dependencies]
prost-build = { workspace = true, features = ["format"] }
nats-service-generator = { path = "../nats-service-generator" }

[dev-dependencies]
async-nats = { workspace = true, features = ["ring"] }
bytes = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }