[package]
name = "protobuf-nats-service-generator"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
convert_case = { workspace = true }
prost-build = { workspace = true, features = ["format"] }
