[package]
name = "wasmcloud-proto-types"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Required for generating
proto = { workspace = true }
# Required for using the types
prost = { workspace = true, features = ["derive", "std"] }

# NOTE: not required for this crate, required for consumers of the generated code
# Consider either vendoring these dependencies or removing them, or a feature flag
anyhow = { workspace = true }
async-nats = { workspace = true, features = ["ring"] }
bytes = { workspace = true }
futures = { workspace = true }

[build-dependencies]
prost-build = { workspace = true, features = ["format"] }
protobuf-nats-service-generator = { workspace = true }

[dev-dependencies]
async-nats = { workspace = true, features = ["ring"] }
tokio = { workspace = true }