[package]
name = "wasmcloud-proto-types"
version = "0.1.0"
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Dependencies for the generated code
anyhow = { workspace = true }
async-nats = { workspace = true, features = ["ring"] }
bytes = { workspace = true }
futures = { workspace = true }
prost = { workspace = true, features = ["derive", "std"] }
# Required for generating types
proto = { workspace = true }

[build-dependencies]
prost-build = { workspace = true, features = ["format"] }
protobuf-nats-service-generator = { workspace = true }

[dev-dependencies]
async-nats = { workspace = true, features = ["ring"] }
tokio = { workspace = true }