[package]
name = "http-hello-world"
edition = "2021"
version = "0.1.0"

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
waki = "0.3.2"
wasi = { version = "0.13.3", features = ["std"] }
wasmcloud-component = { path = "../../../../crates/component" }

[patch.crates-io]
url = { path = "/Users/brooks/github.com/servo/rust-url/url" }
form_urlencoded = { path = "/Users/brooks/github.com/servo/rust-url/form_urlencoded" }